# plate-model-manager

./: .gitignore  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  models.json  modules.html  network_requests.html  notes.md  objects.inv  plate-model-manager-venv.txt  plate_model.html  plate_model_manager.html  present_day_rasters.json  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: build-doc-update-gh-pages.yml  build.yml  create-release.yml  on-create-tag.yml  on-release-publish.yml  unittest-win.yml  unittest.yml
_modules/: index.html
_modules/plate_model_manager/: download_utils.html  exceptions.html  file_fetcher.html  misc_utils.html  network_aiohttp.html  network_requests.html  network_utils.html  plate_model.html  plate_model_manager.html  present_day_rasters.html  unzip_utils.html  zenodo.html
_sources/: modules.rst.txt  network_aiohttp.rst.txt  plate_model_manager.rst.txt
config/: create_models_json_files.py  gplately_model_list.json  models.json  models_raw_data.json  models_v2.json  models_v2_eb.json  models_v2_gp.json  present_day_rasters.json
dev/: api.html  basic_usages.html  command_line_interface.html  examples.html  genindex.html  index.html  installation.html  modules.html  network_aiohttp.html  objects.inv  plate_model_manager.html  py-modindex.html  search.html  searchindex.js
dev/_modules/: index.html
dev/_sources/: basic_usages.rst.txt  command_line_interface.rst.txt  examples.rst.txt  index.rst.txt  network_requests.rst.txt  plate_model.rst.txt  plate_model_manager.rst.txt
doc/: readme.md
doc/source/: api.rst  basic_usages.rst  conf.py  examples.rst  index.rst  installation.rst  (+1 more)
helpers/: collect_alfonso2024.py  collect_all.sh  collect_cao2020.py  collect_cao2023.py  collect_cao2024.py  collect_clennett2020_m2019.py  collect_clennett2020_s2013.py  collect_domeier2014.py  collect_gibbons2015.py  collect_golonka.py  collect_gurnis2012.py  collect_matthews2016.py  collect_matthews2016_mantle_ref.py  collect_matthews2016_pmag_ref.py  collect_merdith2021.py  collect_muller2008.py  collect_muller2016.py  collect_muller2019.py  collect_muller2022.py  collect_paleomap.py  collect_pehrsson2015.py  collect_rodinia.py  collect_seton2012.py  collect_shephard2013.py  collect_shirmard2025.py  collect_torsvikcocks2017.py  collect_young2018.py  collect_zahirovic2014.py  collect_zahirovic2016.py  collect_zahirovic2022.py  readme.md  utils.py
scripts/: build-doc.sh  build-workflow.sh  create-release.py  create-tag.sh  update-gh-pages.sh
unittest/: common.py  models_test.json  run_testcases.sh  test.py  test_basic.py  test_concurrent_download.py  test_download_file.py  test_download_large_file.py  test_file_downloader.py  test_nest_asyncio.ipynb  test_plate_model.py  test_plate_model_manager.py  test_plate_model_readonly.py  test_pmm_server.py  test_present_day_raster.py  test_time_dep_rasters.py  test_wms.py  test_zenodo.py
v1.2.0/: genindex.html  index.html  modules.html  objects.inv  plate_model_manager.html  py-modindex.html  searchindex.js
v1.3.0/: basic_usages.html  command_line_interface.html  examples.html  genindex.html  index.html  installation.html  modules.html  objects.inv
(+54 files in other folders)
